--- a/Supervised Machine Learning/Linear Regression/Multiple Variable Linear Regression.ipynb
+++ b/Supervised Machine Learning/Linear Regression/Multiple Variable Linear Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e22061be",
    "metadata": {},
    "outputs": [],
@@ -14,12 +14,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d427e255",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train=[]"
+    "x_train=np.array([[2104,5,1,45],[1416,3,2,40],[852,2,1,35]])\n",
+    "y_train=np.array([460,232,178])\n",
+    "b_init = 785.1811367994083\n",
+    "w_init = np.array([ 0.39133535, 18.75376741, -53.36032453, -26.42131618])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c71f0982",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_vec shape (4,), x_vec value: [2104    5    1   45]\n",
+      "[2104    5    1   45]\n",
+      "f_wb shape (), prediction: 459.9999976194083\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Single Prediction Element By Element\n",
+    "def predict_single_loop(x,w,b):\n",
+    "    n=x.shape[0]\n",
+    "    p=0\n",
+    "    for i in range(n):\n",
+    "        p_i=x[i]*w[i]\n",
+    "        p=p+p_i\n",
+    "    p=p+b\n",
+    "    return p\n",
+    "\n",
+    "x_vec=x_train[0,:]\n",
+    "print(f\"x_vec shape {x_vec.shape}, x_vec value: {x_vec}\")\n",
+    "print(x_vec)\n",
+    "f_wb = predict_single_loop(x_vec, w_init, b_init)\n",
+    "print(f\"f_wb shape {f_wb.shape}, prediction: {f_wb}\")"
    ]
   }
  ],
@@ -30,7 +67,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.1"
   }
  },
