--- a/Supervised Machine Learning/Linear Regression/Multiple Variable Linear Regression.ipynb
+++ b/Supervised Machine Learning/Linear Regression/Multiple Variable Linear Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "e22061be",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "d427e255",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "c71f0982",
    "metadata": {},
    "outputs": [
@@ -57,6 +57,60 @@
     "print(x_vec)\n",
     "f_wb = predict_single_loop(x_vec, w_init, b_init)\n",
     "print(f\"f_wb shape {f_wb.shape}, prediction: {f_wb}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ec7027f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_vec shape (4,), x_vec value: [2104    5    1   45]\n",
+      "f_wb shape (), prediction: 459.9999976194083\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Single Prediction, Vector\n",
+    "def predict(x,w,b):\n",
+    "    p=np.dot(x,w)+b\n",
+    "    return p\n",
+    "x_vec = x_train[0,:]\n",
+    "print(f\"x_vec shape {x_vec.shape}, x_vec value: {x_vec}\")\n",
+    "f_wb = predict(x_vec,w_init, b_init)\n",
+    "print(f\"f_wb shape {f_wb.shape}, prediction: {f_wb}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "753accd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost at optimal w : 1.5578904428966628e-12\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Compute Cost With Multiple Variables\n",
+    "def compute_cost(x,y,w,b):\n",
+    "    m=x.shape[0]\n",
+    "    cost=0\n",
+    "    for i in range(m):\n",
+    "        f_wb=np.dot(x[i],w)+b\n",
+    "        cost = cost + (f_wb-y[i])**2\n",
+    "    cost=cost/(2*m)\n",
+    "    return cost\n",
+    "cost = compute_cost(x_train, y_train, w_init, b_init)\n",
+    "print(f'Cost at optimal w : {cost}')"
    ]
   }
  ],
