--- a/Supervised Machine Learning/Linear Regression/Multiple Variable Linear Regression.ipynb
+++ b/Supervised Machine Learning/Linear Regression/Multiple Variable Linear Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "e22061be",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "d427e255",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "c71f0982",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "ec7027f0",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "753accd9",
    "metadata": {},
    "outputs": [
@@ -111,6 +111,41 @@
     "    return cost\n",
     "cost = compute_cost(x_train, y_train, w_init, b_init)\n",
     "print(f'Cost at optimal w : {cost}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "0f0c1cfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dj_db at initial w,b: -1.6739251501955248e-06\n",
+      "dj_dw at initial w,b: \n",
+      " [-2.72623577e-03 -6.27197263e-06 -2.21745578e-06 -6.92403391e-05]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Compute Gradient With Multiple Varibales\n",
+    "def compute_gradient(x,y,w,b):\n",
+    "    m,n=x.shape\n",
+    "    dj_dw=np.zeros((n,))\n",
+    "    dj_db=0\n",
+    "    for i in range(m):\n",
+    "        error=(np.dot(x[i],w)+b)-y[i]\n",
+    "        for j in range(n):\n",
+    "            dj_dw[j]=dj_dw[j]+error *x[i,j]\n",
+    "        dj_db=dj_db+error\n",
+    "    dj_dw=dj_dw/m\n",
+    "    dj_db=dj_db/m\n",
+    "    return dj_db,dj_dw\n",
+    "tmp_dj_db, tmp_dj_dw = compute_gradient(x_train, y_train, w_init, b_init)\n",
+    "print(f'dj_db at initial w,b: {tmp_dj_db}')\n",
+    "print(f'dj_dw at initial w,b: \\n {tmp_dj_dw}')"
    ]
   }
  ],
