--- a/Supervised Machine Learning/Linear Regression/Multiple Variable Linear Regression.ipynb
+++ b/Supervised Machine Learning/Linear Regression/Multiple Variable Linear Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "id": "e22061be",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "id": "d427e255",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "id": "c71f0982",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "id": "ec7027f0",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "id": "753accd9",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "id": "0f0c1cfc",
    "metadata": {},
    "outputs": [
@@ -147,6 +147,77 @@
     "print(f'dj_db at initial w,b: {tmp_dj_db}')\n",
     "print(f'dj_dw at initial w,b: \\n {tmp_dj_dw}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "3cd39712",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration    0: Cost  2529.46\n",
+      "Iteration   50: Cost   696.53\n",
+      "Iteration  100: Cost   695.99\n",
+      "Iteration  150: Cost   695.45\n",
+      "Iteration  200: Cost   694.92\n",
+      "Iteration  250: Cost   694.39\n",
+      "Iteration  300: Cost   693.86\n",
+      "Iteration  350: Cost   693.33\n",
+      "Iteration  400: Cost   692.81\n",
+      "Iteration  450: Cost   692.29\n",
+      "Iteration  500: Cost   691.77\n",
+      "Iteration  550: Cost   691.25\n",
+      "Iteration  600: Cost   690.73\n",
+      "Iteration  650: Cost   690.22\n",
+      "Iteration  700: Cost   689.71\n",
+      "Iteration  750: Cost   689.20\n",
+      "Iteration  800: Cost   688.70\n",
+      "Iteration  850: Cost   688.19\n",
+      "Iteration  900: Cost   687.69\n",
+      "Iteration  950: Cost   687.19\n",
+      "b,w found by gradient descent: -0.00,[ 0.20396569  0.00374919 -0.0112487  -0.0658614 ] \n",
+      "prediction: 426.19, target value: 460\n",
+      "prediction: 286.17, target value: 232\n",
+      "prediction: 171.47, target value: 178\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Gradient Descent With Multiple Variables\n",
+    "def gradient_descent(x,y,w,b,cost_function,gradient_function,alpha,num_iters):\n",
+    "    J_history=[]\n",
+    "    w=copy.deepcopy(w)\n",
+    "    b=b\n",
+    "    for i in range(num_iters):\n",
+    "        dj_db,dj_dw=gradient_function(x,y,w,b)\n",
+    "        w=w-alpha*dj_dw\n",
+    "        b=b-alpha*dj_db\n",
+    "        if i<100000:\n",
+    "            J_history.append(cost_function(x,y,w,b))\n",
+    "        if i%math.ceil(num_iters/20)==0:\n",
+    "            print(f\"Iteration {i:4d}: Cost {J_history[-1]:8.2f}\")\n",
+    "    return w, b, J_history\n",
+    "initial_w=np.zeros_like(w_init)\n",
+    "initial_b=0\n",
+    "iterations=1000\n",
+    "alpha=5.0e-7\n",
+    "w_final, b_final, J_hist = gradient_descent(x_train, y_train, initial_w, initial_b, compute_cost, compute_gradient,alpha, iterations)\n",
+    "print(f\"b,w found by gradient descent: {b_final:0.2f},{w_final} \")\n",
+    "m,_ = x_train.shape\n",
+    "for i in range(m):\n",
+    "    print(f\"prediction: {np.dot(x_train[i], w_final) + b_final:0.2f}, target value: {y_train[i]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3e3edb0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
