--- a/Supervised Machine Learning/Linear Regression/Multiple Variable Linear Regression.ipynb
+++ b/Supervised Machine Learning/Linear Regression/Multiple Variable Linear Regression.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "e22061be",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import copy , math\n",
-    "import matplotlib.pyplot as plt"
+    "import copy , math"
    ]
   },
   {
@@ -210,14 +209,6 @@
     "for i in range(m):\n",
     "    print(f\"prediction: {np.dot(x_train[i], w_final) + b_final:0.2f}, target value: {y_train[i]}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3e3edb0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
