--- a/Supervised Machine Learning/Logistic Regression/Regularized Cost and Gradient.ipynb
+++ b/Supervised Machine Learning/Logistic Regression/Regularized Cost and Gradient.ipynb
@@ -2,16 +2,76 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8ad0c841",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ecad00df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Regularized cost: 0.07917239320214277\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Cost Functions With Regularization\n",
+    "def compute_cost_linear_reg(x,y,w,b,lambda_=1):\n",
+    "    m=x.shape[0]\n",
+    "    n=len(w)\n",
+    "    cost=0\n",
+    "    for i in range(m):\n",
+    "        f_wb=np.dot(x[i],w)+b\n",
+    "        cost=cost+(f_wb-y[i])**2\n",
+    "    cost=cost/(2*m)\n",
+    "    \n",
+    "    reg_cost=0\n",
+    "    for j in range(n):\n",
+    "        reg_cost+=(w[j]**2)\n",
+    "    reg_cost=(lambda_/(2*m))*reg_cost\n",
+    "    \n",
+    "    total_cost = cost + reg_cost\n",
+    "    return total_cost\n",
+    "\n",
+    "np.random.seed(1)\n",
+    "X_tmp = np.random.rand(5,6)\n",
+    "y_tmp = np.array([0,1,0,1,0])\n",
+    "w_tmp = np.random.rand(X_tmp.shape[1]).reshape(-1,)-0.5\n",
+    "b_tmp = 0.5\n",
+    "lambda_tmp = 0.7\n",
+    "cost_tmp = compute_cost_linear_reg(X_tmp, y_tmp, w_tmp, b_tmp, lambda_tmp)\n",
+    "print(\"Regularized cost:\", cost_tmp)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
