--- a/Supervised Machine Learning/Logistic Regression/Regularized Cost and Gradient.ipynb
+++ b/Supervised Machine Learning/Logistic Regression/Regularized Cost and Gradient.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "8ad0c841",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import cmath"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "ecad00df",
    "metadata": {},
    "outputs": [
@@ -53,11 +54,53 @@
     "cost_tmp = compute_cost_linear_reg(X_tmp, y_tmp, w_tmp, b_tmp, lambda_tmp)\n",
     "print(\"Regularized cost:\", cost_tmp)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9800487b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Regularized cost: 0.6850849138741673\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Cost Function For Regularization Logistic Regression\n",
+    "def compute_cost_logistic_reg(x,y,w,b,lambda_=1):\n",
+    "    m,n=x.shape\n",
+    "    cost=0\n",
+    "    for i in range(m):\n",
+    "        z=np.dot(x[i],w)+b\n",
+    "        sigmoid=1/(1+(np.exp(-z)))\n",
+    "        f_wb=sigmoid\n",
+    "        cost += (-y[i]*np.log(f_wb))-((1-y[i])*np.log(1-f_wb))\n",
+    "    cost=cost/m\n",
+    "    reg_cost=0\n",
+    "    for j in range(n):\n",
+    "        reg_cost += ((w[j])**2)\n",
+    "    reg_cost=(lambda_/(2*m))*reg_cost\n",
+    "    total_cost= cost + reg_cost\n",
+    "    return total_cost\n",
+    "\n",
+    "np.random.seed(1)\n",
+    "X_tmp = np.random.rand(5,6)\n",
+    "y_tmp = np.array([0,1,0,1,0])\n",
+    "w_tmp = np.random.rand(X_tmp.shape[1]).reshape(-1,)-0.5\n",
+    "b_tmp = 0.5\n",
+    "lambda_tmp = 0.7\n",
+    "cost_tmp = compute_cost_logistic_reg(X_tmp, y_tmp, w_tmp, b_tmp, lambda_tmp)\n",
+    "print(\"Regularized cost:\", cost_tmp)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -71,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
