--- a/Supervised Machine Learning/Logistic Regression/Regularized Cost and Gradient.ipynb
+++ b/Supervised Machine Learning/Logistic Regression/Regularized Cost and Gradient.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 93,
    "id": "8ad0c841",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 94,
    "id": "ecad00df",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 95,
    "id": "9800487b",
    "metadata": {},
    "outputs": [
@@ -95,6 +95,49 @@
     "lambda_tmp = 0.7\n",
     "cost_tmp = compute_cost_logistic_reg(X_tmp, y_tmp, w_tmp, b_tmp, lambda_tmp)\n",
     "print(\"Regularized cost:\", cost_tmp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "08637faf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dj_db: 0.6648774569425726\n",
+      "Regularized dj_dw:\n",
+      " [0.8675196371248816, 0.832076858031303, 0.8518707616823105]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Gradient Function For Regularized Linear Regression\n",
+    "def compute_gradient_linear_reg(x,y,w,b,lambda_):\n",
+    "    m,n=x.shape\n",
+    "    dj_dw=np.zeros((n,))\n",
+    "    dj_db=0\n",
+    "    for i in range(m):\n",
+    "        error=(np.dot(x[i],w)+b) - y[i]\n",
+    "        for j in range(n):\n",
+    "            dj_dw += error * x[i,j]\n",
+    "        dj_db=dj_db+error\n",
+    "    dj_dw=dj_dw/m\n",
+    "    dj_db=dj_db/m\n",
+    "    for j in range(n):\n",
+    "        dj_dw[j] += (lambda_ / m) * w[j]\n",
+    "    return dj_db,dj_dw\n",
+    "np.random.seed(1)\n",
+    "X_tmp = np.random.rand(5,3)\n",
+    "y_tmp = np.array([0,1,0,1,0])\n",
+    "w_tmp = np.random.rand(X_tmp.shape[1])\n",
+    "b_tmp = 0.5\n",
+    "lambda_tmp = 0.7\n",
+    "dj_db_tmp, dj_dw_tmp =  compute_gradient_linear_reg(X_tmp, y_tmp, w_tmp, b_tmp, lambda_tmp)\n",
+    "print(f\"dj_db: {dj_db_tmp}\", )\n",
+    "print(f\"Regularized dj_dw:\\n {dj_dw_tmp.tolist()}\", )"
    ]
   }
  ],
