--- a/Supervised Machine Learning/Logistic Regression/Regularized Cost and Gradient.ipynb
+++ b/Supervised Machine Learning/Logistic Regression/Regularized Cost and Gradient.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 102,
    "id": "8ad0c841",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 103,
    "id": "ecad00df",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 104,
    "id": "9800487b",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 105,
    "id": "08637faf",
    "metadata": {},
    "outputs": [
@@ -136,6 +136,52 @@
     "b_tmp = 0.5\n",
     "lambda_tmp = 0.7\n",
     "dj_db_tmp, dj_dw_tmp =  compute_gradient_linear_reg(X_tmp, y_tmp, w_tmp, b_tmp, lambda_tmp)\n",
+    "print(f\"dj_db: {dj_db_tmp}\", )\n",
+    "print(f\"Regularized dj_dw:\\n {dj_dw_tmp.tolist()}\", )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "c529f8fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dj_db: 0.341798994972791\n",
+      "Regularized dj_dw:\n",
+      " [0.17380012933994293, 0.32007507881566943, 0.10776313396851499]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Gradient Function For Regularized Logistic Regression\n",
+    "def compute_gradient_logistic_reg(x,y,w,b,lambda_):\n",
+    "    m,n=x.shape\n",
+    "    dj_dw=np.zeros((n,))\n",
+    "    dj_db=0\n",
+    "    for i in range(m):\n",
+    "        z=(np.dot(x[i],w)+b)\n",
+    "        sigmoid=1/(1 + np.exp(-z))\n",
+    "        error=sigmoid - y[i]\n",
+    "        for j in range(n):\n",
+    "            dj_dw[j] += error * x[i,j]\n",
+    "        dj_db += error\n",
+    "    dj_dw = dj_dw/m\n",
+    "    dj_db=dj_db/m\n",
+    "    for j in range(n):\n",
+    "        dj_dw[j] += (lambda_/m)*w[j]\n",
+    "    return dj_db,dj_dw\n",
+    "np.random.seed(1)\n",
+    "X_tmp = np.random.rand(5,3)\n",
+    "y_tmp = np.array([0,1,0,1,0])\n",
+    "w_tmp = np.random.rand(X_tmp.shape[1])\n",
+    "b_tmp = 0.5\n",
+    "lambda_tmp = 0.7\n",
+    "dj_db_tmp, dj_dw_tmp =  compute_gradient_logistic_reg(X_tmp, y_tmp, w_tmp, b_tmp, lambda_tmp)\n",
+    "\n",
     "print(f\"dj_db: {dj_db_tmp}\", )\n",
     "print(f\"Regularized dj_dw:\\n {dj_dw_tmp.tolist()}\", )"
    ]
